--- a/shippable.yml
+++ b/shippable.yml
@@ -2,6 +2,21 @@ language: none
 
 sudo: required
 
+runtime:
+  nodePool: shippable_shared_aarch64
+
+env:
+  global:
+    - DOCKER_REPO="docker-rethinkdb"
+    - DOCKER_ACC=gounthar # {account name}
+    
 build:
  ci:
-  - docker build .
+   - docker build -t $DOCKER_ACC/$DOCKER_REPO:aarch64 .
+ post_ci:
+   - docker push $DOCKER_ACC/$DOCKER_REPO:aarch64
+
+integrations:                               
+  hub:
+    - integrationName: docker_hub
+      type: dockerRegistryLogin  
